# paralel-labs

./: README.md
laba-2/: CMakeLists.txt  main.cpp
laba-2/matrix/operations/: ParallelMatrixOperations.cpp  ParallelMatrixOperations.h
laba-2/vector/operations/: ParallelVectorOperations.cpp  ParallelVectorOperations.h
laba-3/: CMakeLists.txt  SLAU.cpp  SLAU.h  SlauGenerator.cpp  SlauGenerator.h  main.cpp
laba4/: CMakeLists.txt  ODU.cpp  ODU.h  main.cpp
laba5/: CMakeLists.txt  ThreadSaveQueue.cpp  ThreadSaveQueue.h  ThreadSaveStack.cpp  ThreadSaveStack.h  ThreadSaveVector.cpp  ThreadSaveVector.h  main.cpp
